Changing width to 400

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
   <style>
     body {
-      margin: 10px 10px 10px 10px;
-      width: 500px;
+      margin: 5px 5px 5px 5px;
+      width: 400px;
     }
 
     .bold {
@@ -88,9 +88,9 @@
 
       // Set chart options
       var options = {
-        titleTextStyle: { fontSize: 16 },
+        titleTextStyle: { fontSize: 14 },
         title: 'Number of weekly customer visits',
-        width: 500,
+        width: 390,
         height: 350,
         bar: { groupWidth: "80%" },
         vAxis: { title: 'Week ending' },
@@ -133,9 +133,9 @@
 
       // Set chart options
       var options = {
-        titleTextStyle: { fontSize: 16 },
+        titleTextStyle: { fontSize: 14 },
         title: 'Number of weekly customer visits',
-        width: 500,
+        width: 390,
         height: 350,
         bar: { groupWidth: "80%" },
         vAxis: { title: 'Week ending' },
@@ -188,9 +188,9 @@
 
       // Set chart options
       var options = {
-        titleTextStyle: { fontSize: 16 },
+        titleTextStyle: { fontSize: 14 },
         title: 'Median customer spend per visit',
-        width: 500,
+        width: 390,
         height: 350,
         bar: { groupWidth: "80%" },
         vAxis: { title: 'Week ending' },
@@ -233,9 +233,9 @@
 
       // Set chart options
       var options = {
-        titleTextStyle: { fontSize: 16 },
+        titleTextStyle: { fontSize: 14 },
         title: 'Median customer spend per visit',
-        width: 500,
+        width: 390,
         height: 350,
         bar: { groupWidth: "80%" },
         vAxis: { title: 'Week ending' },
@@ -286,9 +286,9 @@
 
       // Set chart options
       var options = {
-        titleTextStyle: { fontSize: 16 },
+        titleTextStyle: { fontSize: 14 },
         title: 'Customer spend amount distribution',
-        width: 500,
+        width: 390,
         height: 300,
         bar: { groupWidth: "80%" },
         vAxis: { title: 'Number of sales' },
@@ -331,9 +331,9 @@
 
       // Set chart options
       var options = {
-        titleTextStyle: { fontSize: 16 },
+        titleTextStyle: { fontSize: 14 },
         title: 'Personal and corporate customer visits',
-        width: 500,
+        width: 390,
         height: 350,
         bar: { groupWidth: "80%" },
         vAxis: { title: 'Week ending' },
@@ -376,9 +376,9 @@
 
       // Set chart options
       var options = {
-        titleTextStyle: { fontSize: 16 },
+        titleTextStyle: { fontSize: 14 },
         title: 'Personal and corporate customer spend',
-        width: 500,
+        width: 390,
         height: 350,
         bar: { groupWidth: "80%" },
         vAxis: { title: 'Week ending' },
@@ -396,7 +396,7 @@
 
 <body>
   <!--Div that will hold the pie chart-->
-  <div class="bold" style="width: 500px; height: 315px; background: url('header_500-315.jpg')">
+  <div class="bold" style="height: 246px; background: url('header_400_252.jpg')">
     <div style="padding: 120px 0px 0px 30px;">
       <div style="font-size: 20px;">
         <div>Merchant Name</div>
@@ -411,20 +411,20 @@
     <a class="waves-effect waves-light blue btn-small" href="javascript:toggleVisitsChart()">Toggle New vs Repeat
       Customers</a>
   </div>
-  <hr style="width: 500px; text-align:left; margin-left:0; height:1px; border:none; color:#ccc; background-color:#ccc;">
+  <hr style="width: 100%; text-align:left; margin-left:0; height:1px; border:none; color:#ccc; background-color:#ccc;">
   <div id="spend_per_visit_div"></div>
   <div id="spend_per_visit_new_vs_repeat_div"></div>
   <div style="text-align: center;">
     <a class="waves-effect waves-light blue btn-small" href="javascript:toggleMedianSpendChart()">Toggle New vs Repeat
       Customers</a>
   </div>
-  <hr style="width: 500px; text-align:left; margin-left:0; height:1px; border:none; color:#ccc; background-color:#ccc;">
+  <hr style="width: 100%; text-align:left; margin-left:0; height:1px; border:none; color:#ccc; background-color:#ccc;">
   <div id="spend_distribution_div"></div>
-  <hr style="width: 500px; text-align:left; margin-left:0; height:1px; border:none; color:#ccc; background-color:#ccc;">
+  <hr style="width: 100%; text-align:left; margin-left:0; height:1px; border:none; color:#ccc; background-color:#ccc;">
   <div id="corporate_visits_div"></div>
-  <hr style="width: 500px; text-align:left; margin-left:0; height:1px; border:none; color:#ccc; background-color:#ccc;">
+  <hr style="width: 100%; text-align:left; margin-left:0; height:1px; border:none; color:#ccc; background-color:#ccc;">
   <div id="corporate_spending_div"></div>
-  <hr style="width: 500px; text-align:left; margin-left:0; height:1px; border:none; color:#ccc; background-color:#ccc;">
+  <hr style="width: 100%; text-align:left; margin-left:0; height:1px; border:none; color:#ccc; background-color:#ccc;">
   <div>
     Please note that the insights presented here are estimates only. Customer visits are based on the regularity of the
     same ETFPOS card presented for payment.
