--- a/index.html
+++ b/index.html
@@ -397,12 +397,12 @@
 <body>
   <!--Div that will hold the pie chart-->
   <div class="bold" style="height: 246px; background: url('header_400_252.jpg')">
-    <div style="padding: 120px 0px 0px 30px;">
-      <div style="font-size: 20px;">
+    <div style="padding: 90px 0px 0px 25px;">
+      <div style="font-size: 18px;">
         <div>Merchant Name</div>
         <div>Customer Insights</div>
       </div>
-      <div style="margin-top: 20px;">Location</div>
+      <div style="font-size: 14px; margin-top: 15px;">Location</div>
     </div>
   </div>
   <div id="weekly_visits_div"></div>
