--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
     <table class="responsive-table">
       <tr>
         <td style="background-color: #bbdefb;" width="50%">
-          <table>
+          <table class="responsive-table">
             <tr>
               <td class="bold" style="color: #2979ff ;">
                 15 Apr to 21 Apr
@@ -493,7 +493,7 @@
           </table>
         </td>
         <td style="background-color: #bbdefb;" width="50%">
-          <table>
+          <table class="responsive-table">
             <tr>
               <td class="bold" style="color: #2979ff ;">
                 22 Apr to 28 Apr
