--- a/index.html
+++ b/index.html
@@ -424,10 +424,10 @@
     Number of weekly customer visits
   </div>
   <div style="font-size: 12px; margin: 0px;">
-      <table class="responsive-table">
+      <table>
           <tr>
             <td style="background-color: #bbdefb;" width="50%">
-              <table class="responsive-table">
+              <table>
                 <tr>
                   <td class="bold" style="color: #2979ff ;">
                     15 Apr to 21 Apr
@@ -446,7 +446,7 @@
               </table>
             </td>
             <td style="background-color: #bbdefb;" width="50%">
-              <table class="responsive-table">
+              <table>
                 <tr>
                   <td class="bold" style="color: #2979ff ;">
                     22 Apr to 28 Apr
