--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@
     Median customer spend per visit
   </div>
   <div style="font-size: 12px; margin: 0px;">
-    <table class="responsive-table">
+    <table>
       <tr>
         <td style="background-color: #bbdefb;" width="50%">
-          <table class="responsive-table">
+          <table>
             <tr>
               <td class="bold" style="color: #2979ff ;">
                 15 Apr to 21 Apr
@@ -493,7 +493,7 @@
           </table>
         </td>
         <td style="background-color: #bbdefb;" width="50%">
-          <table class="responsive-table" >
+          <table >
             <tr>
               <td class="bold" style="color: #2979ff ;">
                 22 Apr to 28 Apr
